crates/oxc_react_compiler/tests/snapshots/capturing-func-mutate-2.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/capturing-func-mutate-2.js
---
import { c as _c } from "react/compiler-runtime";
function component(a, b) {
	const $ = _c(2);
	let z;
	if ($[0] !== a) {
		z = { a };
		const x = function() {
			z.a = 2;
		};
		x();
		$[0] = a;
		$[1] = z;
	} else {
		z = $[1];
	}
	return z;
}
export const FIXTURE_ENTRYPOINT = {
	fn: component,
	params: [{
		a: "val1",
		b: "val2"
	}],
	isComponent: false
};
