crates/oxc_react_compiler/tests/snapshots/capturing-func-mutate-3.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/capturing-func-mutate-3.js
---
import { c as _c } from "react/compiler-runtime";
function component(a, b) {
	const $ = _c(2);
	let t0;
	if ($[0] !== a) {
		t0 = { a };
		$[0] = a;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const z = t0;
	return z;
}
export const FIXTURE_ENTRYPOINT = {
	fn: component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
