crates/oxc_react_compiler/tests/snapshots/capturing-func-mutate-nested.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/capturing-func-mutate-nested.js
---
import { c as _c } from "react/compiler-runtime";
function component(a) {
	const $ = _c(2);
	let y;
	if ($[0] !== a) {
		y = { b: { a } };
		const x = function() {
			y.b.a = 2;
		};
		x();
		$[0] = a;
		$[1] = y;
	} else {
		y = $[1];
	}
	return y;
}
export const FIXTURE_ENTRYPOINT = {
	fn: component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
