crates/oxc_react_compiler/tests/snapshots/capturing-func-mutate.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/capturing-func-mutate.js
---
import { c as _c } from "react/compiler-runtime";
import { mutate } from "shared-runtime";
function Component(t0) {
	const $ = _c(3);
	const { a, b } = t0;
	let t1;
	if ($[0] !== a || $[1] !== b) {
		const z = { a };
		const y = { b: { b } };
		const x = function() {
			z.a = 2;
			mutate(y.b);
		};
		x();
		t1 = [y, z];
		$[0] = a;
		$[1] = b;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{
		a: 2,
		b: 3
	}],
	sequentialRenders: [
		{
			a: 2,
			b: 3
		},
		{
			a: 2,
			b: 3
		},
		{
			a: 4,
			b: 3
		},
		{
			a: 4,
			b: 5
		}
	]
};
